// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендериться список табов в разделе стасистики c кредитами вместо видео 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
    ]
  }
/>
`;

exports[`должен отрендериться список табов в разделе стасистики без марки 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars",
      },
    ]
  }
/>
`;

exports[`должен отрендериться список табов в разделе стасистики с маркой 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&mark=vaz&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=vaz",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=vaz&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=vaz&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=vaz",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=vaz&section=all",
      },
    ]
  }
/>
`;

exports[`должен отрендериться список табов в разделе стасистики с маркой и моделью 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&mark=vaz&model=vesta&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=vaz&model=vesta",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=vaz&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=vaz&model=vesta&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=vaz&model=vesta",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=vaz&model=vesta&section=all",
      },
    ]
  }
/>
`;

exports[`должен отрендериться список табов в разделе стасистики с маркой, моделью и поколением 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&mark=vaz&model=vesta&super_gen=20417749&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=vaz&model=vesta&super_gen=20417749",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=vaz&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=vaz&model=vesta&super_gen=20417749&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=vaz&model=vesta&super_gen=20417749",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=vaz&model=vesta&super_gen=20417749&section=all",
      },
    ]
  }
/>
`;

exports[`должен отрендериться список табов в разделе стасистики с маркой, моделью, поколением и кузовом 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&mark=vaz&model=vesta&super_gen=20417749&configuration_id=10382711&section=all&tech_param_id=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=vaz&model=vesta&super_gen=20417749&configuration_id=10382711",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=vaz&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=vaz&model=vesta&super_gen=20417749&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=vaz&model=vesta&super_gen=20417749",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=vaz&model=vesta&super_gen=20417749&configuration_id=10382711&section=all",
      },
    ]
  }
/>
`;

exports[`должен отрендериться список табов в разделе стасистики с маркой, моделью, поколением, кузовом и комплектацией 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&mark=vaz&model=vesta&super_gen=20417749&configuration_id=10382711&section=all&tech_param_id=20679662",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars&mark=vaz&model=vesta&super_gen=20417749&configuration_id=10382711&complectation_id=10382711_21041586_20679662",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=vaz&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=vaz&model=vesta&super_gen=20417749&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=vaz&model=vesta&super_gen=20417749",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=vaz&model=vesta&super_gen=20417749&configuration_id=10382711&section=all",
      },
    ]
  }
/>
`;
